Update directories structure.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,217 @@
 ################################################################################
 
 /Stl-Network/Debug/xerces-c_3_1D.ilk
+/Stl-Network/Debug/xerces-c_3_1D.dll
+/Stl-Network/Debug/stl network engine.pdb
+/Stl-Network/Debug/stl network engine.ilk
+/Stl-Network/Debug/stl network engine.exe
+/Stl-Network/.vs/Stl-Network/v15/Browse.VC.opendb
+/Stl-Network/.vs/Stl-Network/v15/Browse.VC.db
+/Stl-Network/.vs/Stl-Network/v15/.suo
+/Stl-Network/.vs/stl network engine/v15/Browse.VC.db
+/Stl-Network/.vs/stl network engine/v15/.suo
+/.vs/VSWorkspaceState.json
+/.vs/Stl-Network/v15/.suo
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/Stl-Network/Release/stl network engine.pdb
+/Stl-Network/Release/stl network engine.ipdb
+/Stl-Network/Release/stl network engine.iobj
+/Stl-Network/Release/stl network engine.exe
+/Stl-Network/Debug/xerces-c_3_1D.pdb
+/Stl-Network/Debug/xerces-c_3D.lib
+/Stl-Network/Debug/xerces-c_3D.exp
+/Stl-Network/Release/stl network engine.pdb
+/Stl-Network/Release/stl network engine.ipdb
+/Stl-Network/Release/stl network engine.iobj
+/Stl-Network/Release/stl network engine.exe
+/Stl-Network/Debug/xerces-c_3_1D.pdb
+/Stl-Network/Debug/xerces-c_3D.lib
+/Stl-Network/Debug/xerces-c_3D.exp
+/Stl-Network/Release/xerces-c_3_1.pdb
+/Stl-Network/Release/xerces-c_3_1.ipdb
+/Stl-Network/Release/xerces-c_3_1.iobj
+/Stl-Network/Release/xerces-c_3_1.dll
+/Stl-Network/Release/xerces-c_3.lib
+/Stl-Network/Release/xerces-c_3.exp
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/xerces_helper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/www-tools.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/WebCameraPictureDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/Wave.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/vc141.pdb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/vc141.idb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPSOAPAction.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPNATServiceTypes.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPNATHTTPClient.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engineDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.res
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.log
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl network engine.pch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/stl network engine.lastbuildstate
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stdafx.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/ReceivedVideoDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/NetworkManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/NetworkHelper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/MessageBoxDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/IGDDiscoverProcess.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/galaxy_namespace.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/encrypt_xor.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/DOMParser.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/COMManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/BlockSock_ip_6.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/BlockSock_ip_4.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/ApplicationManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/.vs/stl_network_ip_4_ip_6_udp_engine/v15/Browse.VC.db
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/.vs/Stl-Network/v15/Solution.VC.db
+/Stl-Network/Release/xerces-c_3_1.strip.pdb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/xerces_helper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/www-tools.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/WebCameraPictureDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/Wave.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/vc141.pdb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/vc141.idb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPSOAPAction.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPNATServiceTypes.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/UPNPNATHTTPClient.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engineDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.res
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl_network_ip_4_ip_6_udp_engine.log
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl network engine.pch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/stl network engine.lastbuildstate
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/rc.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/CL.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stdafx.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/ReceivedVideoDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/NetworkManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/NetworkHelper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/MessageBoxDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/IGDDiscoverProcess.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/galaxy_namespace.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/encrypt_xor.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/DOMParser.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/COMManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/BlockSock_ip_6.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/BlockSock_ip_4.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/ApplicationManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/.vs/stl_network_ip_4_ip_6_udp_engine/v15/Browse.VC.db
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/.vs/Stl-Network/v15/Solution.VC.db
+/Stl-Network/Release/xerces-c_3_1.strip.pdb
+/Stl-Network/Release/xerces-c_3_1.pdb
+/Stl-Network/Release/xerces-c_3_1.ipdb
+/Stl-Network/Release/xerces-c_3_1.iobj
+/Stl-Network/Release/xerces-c_3_1.dll
+/Stl-Network/Release/xerces-c_3.lib
+/Stl-Network/Release/xerces-c_3.exp
+/Stl-Network/Release/stl network engine.pdb
+/Stl-Network/Release/stl network engine.ipdb
+/Stl-Network/Release/stl network engine.iobj
+/Stl-Network/Release/stl network engine.exe
+/Stl-Network/Debug/xerces-c_3_1D.pdb
+/Stl-Network/Debug/xerces-c_3D.lib
+/Stl-Network/Debug/xerces-c_3D.exp
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.res
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.log
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl network engine.pch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.write.1u.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.lastbuildstate
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/xerces_helper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/www-tools.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/WebCameraPictureDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/Wave.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/vc141.pdb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPSOAPAction.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPNATServiceTypes.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPNATHTTPClient.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engineDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.res
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.log
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl network engine.pch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.write.1u.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.lastbuildstate
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stdafx.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/ReceivedVideoDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/NetworkManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/NetworkHelper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/MessageBoxDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/IGDDiscoverProcess.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/galaxy_namespace.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/encrypt_xor.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/DOMParser.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/COMManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_6.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_4.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/ApplicationManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/xerces_helper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/www-tools.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/WebCameraPictureDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/Wave.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/vc141.pdb
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPSOAPAction.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPNATServiceTypes.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/UPNPNATHTTPClient.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engineDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.res
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl_network_ip_4_ip_6_udp_engine.log
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl network engine.pch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.write.1u.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/stl network engine.lastbuildstate
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/rc.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/link.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.write.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.read.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stl netw.0E42C31B.tlog/CL.command.1.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/stdafx.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/ReceivedVideoDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/NetworkManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/NetworkHelper.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/MessageBoxDialog.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/IGDDiscoverProcess.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/galaxy_namespace.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/encrypt_xor.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/DOMParser.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/COMManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_6.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_4.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/ApplicationManager.obj
