Directories. Исправлена ошибка завершения работы программы.

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,18 @@
 /Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_6.obj
 /Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/BlockSock_ip_4.obj
 /Stl-Network/stl_network_ip_4_ip_6_udp_engine/Release/ApplicationManager.obj
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/http_debug.txt
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/debug_info.txt
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.write.185.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.read.188.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.read.185.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.75.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.185.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.152.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.12.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.112.tlog
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/Debug/stl netw.0E42C31B.tlog/link-VCTIP.delete.11.tlog
+/Stl-Network/.vs/Stl-Network/v15/ipch/STL_NETWORK_IP_4_IP_6_UDP_ENGINE-fe1bb991/STL NETWORK ENGINE-72db539.ipch
+/Stl-Network/.vs/Stl-Network/v15/ipch/STL_NETWORK_IP_4_IP_6_UDP_ENGINE-fe1bb991/STL NETWORK ENGINE-2ece2dbf.ipch
+/Stl-Network/stl_network_ip_4_ip_6_udp_engine/traverse.txt
+/.vs/slnx.sqlite-journal
