--- a/Stl-Network/stl_network_ip_4_ip_6_udp_engine/stl_network_ip_4_ip_6_udp_engine.vcxproj
+++ b/Stl-Network/stl_network_ip_4_ip_6_udp_engine/stl_network_ip_4_ip_6_udp_engine.vcxproj
@@ -112,6 +112,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="..\Инструкция пользователя по работе с программой %27stl network engine%27.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
